src/app/components/navigation-bar/navigation-bar.component.scss
.navigation-container {
  height: 202px;
  width: 100vw;
  margin-bottom: 55px;
  overflow: hidden;
  // background-color: blue;
  // display: flex;
  // align-items: center;
  // justify-content: center;
}

.flex-container {
  display: flex;
  flex-direction: row;
  // align-items: center;
  margin-left: 80px;
  margin-right: 80px;
  height: 150px;
}

.img-container {
  min-width: 400px;
  display: flex;
  align-items: center;
}

img {
  width: 139px;
  height: 96px;
}


.nav-middle {
  display: flex;
  flex-direction: column;
  justify-content: center;
  width: 100vw;
  min-width: 773px;
}

.flex-top {
  display: flex;
  flex-direction: row;
  align-items: baseline;
  // width: 100vw;
  // margin-right: 80px;
  justify-content: space-between;
  padding-top: 42px;
}

.flex-bottom {
  display: flex;
  flex-direction: row;
  align-items: baseline;

}

hr {
  margin: 0;
}

